Fixed bug where search results was hidden behind content

--- a/public/styles/site/header.less
+++ b/public/styles/site/header.less
@@ -62,3 +62,7 @@ input[type="search"] {
 #results a div {
   color: #333;
 }
+
+#results {
+  z-index: 10000;
+}
